# typetific

./: .gitignore  build.spec  main.py  pyproject.toml  readme.md  requirements.txt
assets/: mac_icon.icns
