[tool.poetry]
name = "type"
version = "0.1.0"
description = ""
authors = ["breitburg <me@breitburg.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
PySide6 = "^6.0.1"
english-words = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
