[tool.poetry]
name = "typetific"
version = "0.1.0"
description = "An application for practicing keyboard typing speed skills"
authors = ["Ilya Breitburg <me@breitburg.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
PySide6 = "^6.0.1"
english-words = "^1.0.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
